--- a/templates/sales_pdf.html
+++ b/templates/sales_pdf.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,8 +22,8 @@
         <hr>
         
         <div class="col">
-            <h4>Company Name: BEESHOPEE PVT LMT</h4>
-            <h4>Company Email: beeshopee@gmail.com</h4>
+            <h4>Company Name: Mobile Store PVT LMT</h4>
+            <h4>Company Email: mobilestore@gmail.com</h4>
             <h5>Company Phone: +911234567890</h5>
             <h5>Company Location: 123 stree Bangaluru, India</h5>
 
@@ -67,6 +67,80 @@
                           <strong>  RS. {{total_amount}}</strong>
                         </td>
                     </tr>
+                </tbody>
+            
+            </table>
+                  
+        </div>
+
+       
+
+    
+</div>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+            <style>
+                ul {
+    list-style-type: none;
+}
+            </style>
+</head>
+<body>
+<div class="container">
+    <div class="row">
+        <h4 class="ml-5">Monthly Sales Report </h4>
+        <h1 class="d-flex " style="margin-left:20rem;"><strong>EpicKart</strong></h1>
+        <hr>
+        
+        <div class="col">
+            <h4>Company Name: MobileStore</h4>
+            <h4>Company Email: mobilestore@gmail.com</h4>
+            <h5>Company Phone: +911290785634</h5>
+            <h5>Company Location:123 stree Bangaluru, India</h5>
+
+        </div>
+        <hr>
+        </div>
+        <div class="row">
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th><strong>Product</strong></th>
+                        
+                        <th scope="col" colspan="2"><strong>Quantity</strong></th>
+                        
+                        <th scope="col" colspan="2"><strong>Total</strong></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for i in order_count %}
+                    <tr>
+                       
+                       <td>{{i.categoryName}} {{i.productName}}</td>
+                       <td></td>
+                       <td>{{i.quantity}}</td>
+                       <td></td>
+                        <td>{{i.productPrice}} Rs</td>
+                    </tr>
+                    {% endfor %}
+                    <tr><hr></tr>
+                    <tr> 
+                        <td colspan="3">Total Amount</td>
+                        <td>{{total_amount}} Rs</td>
+                    </tr>
+                        
+                    
                 </tbody>
             
             </table>
